--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
-    "commit": "cz",
+    "commit": "git add . && cz",
     "release": "standard-version --no-verify"
   },
   "dependencies": {
@@ -29,6 +29,7 @@
     "husky": "^8.0.3",
     "postcss": "^8",
     "standard-version": "^9.5.0",
+    "svelte-check": "^3.5.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   },
