--- a/package.json
+++ b/package.json
@@ -1,47 +1,53 @@
 {
-  "name": "app",
-  "version": "0.1.2",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install",
-    "git:commit": "git add . && cz",
-    "git:push": "git push --follow-tags origin",
-    "release": "standard-version --no-verify"
-  },
-  "dependencies": {
-    "next": "14.0.1",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^18.2.0",
-    "@commitlint/config-conventional": "^18.1.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.1",
-    "husky": "^8.0.3",
-    "postcss": "^8",
-    "standard-version": "^9.5.0",
-    "svelte-check": "^3.5.2",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+    "name": "app",
+    "version": "0.1.2",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint --fix --max-warnings=0 && prettier --write .",
+        "prepare": "husky install",
+        "git:commit": "git add . && cz",
+        "git:push": "git push --follow-tags origin",
+        "release": "standard-version --no-verify"
+    },
+    "dependencies": {
+        "next": "14.0.1",
+        "react": "^18",
+        "react-dom": "^18"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^18.2.0",
+        "@commitlint/config-conventional": "^18.1.0",
+        "@types/node": "^20.9.0",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "@typescript-eslint/eslint-plugin": "^6.10.0",
+        "@typescript-eslint/parser": "^6.10.0",
+        "autoprefixer": "^10.0.1",
+        "cz-conventional-changelog": "^3.3.0",
+        "eslint": "^8.53.0",
+        "eslint-config-next": "14.0.1",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.1",
+        "eslint-plugin-simple-import-sort": "^10.0.0",
+        "husky": "^8.0.3",
+        "postcss": "^8",
+        "prettier": "^3.0.3",
+        "standard-version": "^9.5.0",
+        "svelte-check": "^3.5.2",
+        "tailwindcss": "^3.3.0",
+        "typescript": "^5"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
+    },
+    "husky": {
+        "hooks": {
+            "prepare-commit-msg": "exec < /dev/tty && npm run commit -- --hook || true"
+        }
     }
-  },
-  "husky": {
-    "hooks": {
-      "prepare-commit-msg": "exec < /dev/tty && npm run commit -- --hook || true"
-    }
-  }
 }
