--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
     "version": "0.1.4",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "kill-port 3000 && next dev",
         "build": "next build",
         "start": "next start",
         "lint": "next lint --fix --max-warnings=0 && prettier --write .",
+        "test": "jest",
+        "test:watch": "npm run test -- --watch",
         "prepare": "husky install",
-        "git:commit": "git add . && cz",
+        "git:commit": "cz",
         "git:push": "git push --follow-tags origin",
         "release": "standard-version --no-verify"
     },
@@ -18,8 +20,11 @@
         "react-dom": "^18"
     },
     "devDependencies": {
+        "@babel/preset-typescript": "^7.23.3",
         "@commitlint/cli": "^18.2.0",
         "@commitlint/config-conventional": "^18.1.0",
+        "@testing-library/jest-dom": "^6.1.4",
+        "@types/jest": "^29.5.8",
         "@types/node": "^20.9.0",
         "@types/react": "^18",
         "@types/react-dom": "^18",
@@ -33,6 +38,10 @@
         "eslint-plugin-prettier": "^5.0.1",
         "eslint-plugin-simple-import-sort": "^10.0.0",
         "husky": "^8.0.3",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "kill-port": "^2.0.1",
+        "lint-staged": "^15.0.2",
         "postcss": "^8",
         "prettier": "^3.0.3",
         "standard-version": "^9.5.0",
