--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
         "react-dom": "^18"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.23.3",
         "@babel/preset-typescript": "^7.23.3",
         "@commitlint/cli": "^18.2.0",
         "@commitlint/config-conventional": "^18.1.0",
         "@testing-library/jest-dom": "^6.1.4",
+        "@testing-library/react": "^14.1.0",
         "@types/jest": "^29.5.8",
         "@types/node": "^20.9.0",
         "@types/react": "^18",
@@ -47,7 +49,8 @@
         "standard-version": "^9.5.0",
         "svelte-check": "^3.5.2",
         "tailwindcss": "^3.3.0",
-        "typescript": "^5"
+        "typescript": "^5",
+        "webpack": "^5.89.0"
     },
     "config": {
         "commitizen": {
